tests/invalid/list_pop_wrong_arg_count/main.py
xs: list[int] = [1, 2, 3]
xs.pop(0)
